# hello_openvino

./: CMakeLists.txt  README.md  auto_test.cpp  create_model_funcs_list.cpp  create_model_funcs_list.hpp  hello_single_infer.cpp  hello_world.cpp
cpp/: cdpruner_openvino_ops.cpp  hello_single_infer.cpp  multi_threads_infer_on_multi_device.cpp
python/: model_qwen3_native_ov.py
